--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vuepress-theme-hope-template",
-  "version": "2.0.0",
-  "description": "A project of vuepress-theme-hope",
+  "name": "blog",
+  "version": "1.0.0",
+  "description": "colina个人博客",
   "license": "MIT",
   "type": "module",
   "scripts": {
@@ -11,9 +11,9 @@
     "deploy": "bash deploy.sh"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.53",
-    "vue": "^3.2.44",
-    "vuepress": "2.0.0-beta.53",
-    "vuepress-theme-hope": "2.0.0-beta.122"
+    "@vuepress/client": "2.0.0-beta.60",
+    "vue": "^3.2.45",
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-theme-hope": "2.0.0-beta.166"
   }
 }
